--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "nova-prospekt",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 5050"
-  },
-  "dependencies": {
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
-    "vite": "^2.9.1"
-  }
+    "name": "nova-prospekt",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview --port 5050",
+        "deploy": "npm run build && cd ./dist && cp index.html 404.html"
+    },
+    "dependencies": {
+        "vue": "^3.2.31",
+        "vue-router": "^4.0.14"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^2.3.1",
+        "vite": "^2.9.1"
+    }
 }
